fixed overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -547,6 +547,7 @@
     margin: 0;
     padding: 0;
     background-color: $offWhite;
+    overflow: hidden;
   }
 
   /****************************************  SVG WAVES ************************************************************/
